<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@drawable/ic_launcher_background"
    android:layout_height="wrap_content">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="@drawable/square"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:id="@+id/title_text"
            android:textSize="22sp"
            android:text="@string/server_connectivity"/>
        <include layout="@layout/item_divider"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:id="@+id/body_text"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/activity_horizontal_margin"
            android:text="Your current connectivity is null:"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:layout_marginTop="30sp"
            android:padding="@dimen/activity_horizontal_margin">
            <ImageView
                android:id="@+id/ivContactItem1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@mipmap/ic_settings_remote_black_24dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tvNumber4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/ivContactItem1"
                android:layout_toRightOf="@id/ivContactItem1">
                <EditText
                    android:id="@+id/input_ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ip_address"
                    android:inputType="textCapWords"
                    android:ems="10"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#212121" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <include layout="@layout/item_divider"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@drawable/button"
            android:layout_gravity="center"
            android:id="@+id/connect_button"
            android:text="@string/close"/>
    </LinearLayout>
</ScrollView>